<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/mainActivity"
    android:screenOrientation="portrait">


    <ListView
        android:id="@+id/logging"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Logging"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/background_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_grey_android"/>
        <TextView
            android:id="@+id/background_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edge_padding"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/background_text"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/Stop"
        android:padding="@dimen/button_padding"/>

    <Button
        android:id="@+id/start"
        android:text="@string/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/stop"/>

    <Button
        android:id="@+id/clear"
        android:text="@string/clearLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/stop"/>


</RelativeLayout>
